--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -444,16 +444,16 @@
     <div class="gem-c-summary__block"></div>
 </div>
 <h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
-      <li><a href="http://www.bromley.gov.uk" class="govuk-link">London Borough of Bromley Council</a></li>
-      <li><a href="https://www.nhs.uk/conditions/social-care-and-support-guide/care-services-equipment-and-care-homes/care-homes/" class="govuk-link">Care homes - NHS</a></li>
-      <li><a href="https://www.lewes-eastbourne.gov.uk" class="govuk-link">Lewes District Council</a></li>
-      <li><a href="http://www.birmingham.gov.uk" class="govuk-link">Birmingham City Council</a></li>
-      <li><a href="http://www.burnley.gov.uk/" class="govuk-link">Burnley Borough Council</a></li>
-      <li><a href="http://www.richmondshire.gov.uk" class="govuk-link">Richmondshire District Council</a></li>
-      <li><a href="http://www.nfdc.gov.uk" class="govuk-link">New Forest District Council</a></li>
-      <li><a href="http://www.herefordshire.gov.uk" class="govuk-link">Herefordshire Council</a></li>
-      <li><a href="http://www.lewes-eastbourne.gov.uk" class="govuk-link">Eastbourne Borough Council</a></li>
-      <li><a href="http://www.haringey.gov.uk/" class="govuk-link">London Borough of Haringey Council</a></li>
+      <li><a href="http://www.calderdale.gov.uk" class="govuk-link">Calderdale Metropolitan Borough Council</a></li>
+      <li><a href="http://www.staffsmoorlands.gov.uk" class="govuk-link">Staffordshire Moorlands District Council</a></li>
+      <li><a href="http://www.pembrokeshire.gov.uk" class="govuk-link">Pembrokeshire County Council</a></li>
+      <li><a href="http://www.hambleton.gov.uk/" class="govuk-link">Hambleton District Council</a></li>
+      <li><a href="http://www.chiltern.gov.uk" class="govuk-link">Chiltern District Council</a></li>
+      <li><a href="http://www.iwight.com" class="govuk-link">Isle of Wight Council</a></li>
+      <li><a href="http://www.cravendc.gov.uk" class="govuk-link">Craven District Council</a></li>
+      <li><a href="http://www.adur-worthing.gov.uk/" class="govuk-link">Adur &amp; Worthing Councils</a></li>
+      <li><a href="http://www.castlereagh.gov.uk" class="govuk-link">Castlereagh Borough Council</a></li>
+      <li><a href="http://www.telford.gov.uk" class="govuk-link">Telford &amp; Wrekin Council</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
