--- a/document-types/guidance.html
+++ b/document-types/guidance.html
@@ -330,7 +330,7 @@
           <main id="content" class="technical-documentation" data-module="anchored-headings">
               <h1 class="page-title">Document type: guidance</h1>
 
-  <p>There are <strong>20982</strong> pages with document type
+  <p>There are <strong>20984</strong> pages with document type
 &lsquo;guidance&rsquo; in the GOV.UK search index.</p>
 <h2 id='rendering-apps'>Rendering apps</h2><p>This document type is rendered by:</p>
 
@@ -362,7 +362,7 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/publications/list-of-private-providers-of-coronavirus-testing">Private providers of coronavirus testing</a></li>
+<li><a href="https://www.gov.uk/government/publications/list-of-private-providers-of-coronavirus-testing">Private providers of coronavirus (COVID-19) testing</a></li>
 <li><a href="https://www.gov.uk/government/publications/covid-19-response-spring-2021">COVID-19 Response - Spring 2021 (Roadmap)</a></li>
 <li><a href="https://www.gov.uk/government/publications/rates-of-vehicle-tax-v149">Vehicle tax rates (V149 and V149/1)</a></li>
 <li><a href="https://www.gov.uk/government/publications/actions-for-schools-during-the-coronavirus-outbreak">Actions for schools during the coronavirus outbreak</a></li>
