--- a/manual.html
+++ b/manual.html
@@ -261,6 +261,11 @@
           </a>
         </li>
         <li>
+          <a href="#notify-emergency-alerts">
+            <span>Notify Emergency Alerts</span>
+          </a>
+        </li>
+        <li>
           <a href="#paas">
             <span>PaaS</span>
           </a>
@@ -337,6 +342,7 @@
     <h3>Learn</h3>
     <ul>
         <li><a href="/manual/non-ha-node-classes.html">Node classes without redundancy</a></li>
+        <li><a href="/manual/notify-emergency-alerts.html">What is GOV.UK Notify Emergency Alerts?</a></li>
     </ul>
   <h2 id='2nd-line'>2nd line</h2>
 
@@ -668,6 +674,16 @@
         <li><a href="/manual/sidekiq.html">Sidekiq</a></li>
         <li><a href="/manual/tools.html">Tools: Icinga, Grafana and Graphite, Kibana, Fabric and friends</a></li>
         <li><a href="/manual/uptime-metrics.html">Uptime Metrics</a></li>
+    </ul>
+  <h2 id='notify-emergency-alerts'>Notify Emergency Alerts</h2>
+
+    <h3>How to...</h3>
+    <ul>
+        <li><a href="/manual/how-to-rotate-fastly-api-keys-for-notify-emergency-alerts.html">Rotate Fastly API Keys for Notify Emergency Alerts</a></li>
+    </ul>
+    <h3>Learn</h3>
+    <ul>
+        <li><a href="/manual/notify-emergency-alerts.html">What is GOV.UK Notify Emergency Alerts?</a></li>
     </ul>
   <h2 id='paas'>PaaS</h2>
 
