--- a/manual/learn-govuk.html
+++ b/manual/learn-govuk.html
@@ -332,6 +332,10 @@
     <li><a href="/manual/tools.html">Tools: Icinga, Grafana and Graphite, Kibana, Fabric and friends</a></li>
     <li><a href="/manual/uptime-metrics.html">Uptime Metrics</a></li>
   </ul>
+  <h4 id='notify-emergency-alerts'>Notify Emergency Alerts</h4></p>
+<p><ul>
+    <li><a href="/manual/notify-emergency-alerts.html">What is GOV.UK Notify Emergency Alerts?</a></li>
+  </ul>
   <h4 id='publishing'>Publishing</h4></p>
 <p><ul>
     <li><a href="/manual/content-preview.html">How the draft stack works</a></li>
