--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/president-pierre-buyoya-opens-second-wilton-park-conference-on-peacebuilding-in-africa-in-addis-ababa--2">President Pierre Buyoya opens second Wilton Park conference on ‘Peacebuilding in Africa’ in Addis Ababa</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/197856.zh-tw">世界反死刑日</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/national-strategy-for-maritime-security">National Strategy for Maritime Security</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/220494.es-419">Medirán emisiones de metano con muestras tomadas en Chacaltaya</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/230354.pt">Força-Tarefa para Economias Emergentes</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/british-embassy-provides-english-classes-to-costa-rican-police-officers--2">British Embassy provides English classes to Costa Rican Police Officers</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/digital-diplomacy">Digital Diplomacy</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/220494.es-419">Medirán emisiones de metano con muestras tomadas en Chacaltaya</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/queen-elizabeth-land-commemorative-coins-released">Queen Elizabeth Land Commemorative Coins released</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/240607.es-419">Los exámenes TOEFL o TEIC no se aceptarán para tramitar visas de estudio</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/national-strategy-for-maritime-security">National Strategy for Maritime Security</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/230354.pt">Força-Tarefa para Economias Emergentes</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-mumbai--5">Advice for British nationals in Mumbai</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-islands-post-cabinet-statement--2">Turks and Caicos Islands Post Cabinet Statement</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/262824.es-419">Visitan México el Príncipe de Gales y la Duquesa de Cornwall</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/231029.es">Empresa y Derechos Humanos: Agenda Pública y Privada</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
