Hourly scheduled redeploy 84227a4ae95cf86a5eb71b125630896176d9e603

--- a/document-types/welsh_language_scheme.html
+++ b/document-types/welsh_language_scheme.html
@@ -371,7 +371,7 @@
 <li><a href="https://www.gov.uk/government/organisations/home-office/about/welsh-language-scheme">Home Office – Welsh language scheme</a></li>
 <li><a href="https://www.gov.uk/government/organisations/ministry-of-defence/about/welsh-language-scheme">Ministry of Defence – Welsh language scheme</a></li>
 <li><a href="https://www.gov.uk/government/organisations/ministry-of-housing-communities-and-local-government/about/welsh-language-scheme">Ministry of Housing, Communities &amp; Local Government – Welsh language scheme</a></li>
-<li><a href="https://www.gov.uk/government/organisations/parole-board/about/welsh-language-scheme">Parole Board – Welsh language scheme</a></li>
+<li><a href="https://www.gov.uk/government/organisations/department-for-communities-and-local-government/about/welsh-language-scheme">Department for Communities and Local Government – Welsh language scheme</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=welsh_language_scheme&amp;count=10">Source query from Search API</a></p>
 
