Hourly scheduled redeploy cc6e74af2fc659d2781a5b5dabf82d5770a38cb6

--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/220494.es-419">Medirán emisiones de metano con muestras tomadas en Chacaltaya</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/futures-congress-with-large-presence-of-uk-experts-in-chile--2">Futures Congress with large presence of UK experts in Chile</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/209598.it">Presentazione di “A guide for the critical anti-racket consumer”</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/176254.es-419">Concurso: Green is GREAT</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/232492.ja">Educational Testing Service (ETS)　について</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/297168.cs">Jaké reformě EU chce Británie napomoci?</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/212474.ja">G8認知症サミットが開催されました</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/important-notice-for-british-nationals-in-chennai--3">Important notice for British nationals in Chennai</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/jeremy-hunt-meets-japanese-pm-amid-life-sciences-week">Jeremy Hunt meets Japanese PM amid Life Sciences Week </a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-chennai--7">Advice for British nationals in Chennai</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/deputy-consul-general-the-uk-is-a-friend-of-the-people-of-hebron--2">Deputy Consul General: The UK is a friend of the people of Hebron</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/284721.es-419">British Council y Ministerio de Educación inician Escuela de Verano para capacitar a 400 profesores peruanos de inglés</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/215108.es-419">Islas Falklands</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/jeremy-hunt-meets-japanese-pm-amid-life-sciences-week">Jeremy Hunt meets Japanese PM amid Life Sciences Week </a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/269080.es-419">Discurso pronunciado por Su Alteza Real El Príncipe De Gales durante el evento de Paz y Reconciliación en su visita a Colombia</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/192676.pt">São Paulo e Rio recebem a maior feira de educação britânica já organizada no país</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/232340.es">Expertos internacionales analizan planes nacionales de empresa y derechos humanos</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/296968.zh-tw">英國簽證網路說明會</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/uk-visa-applicant-arrested-for-fraud--2">UK Visa Applicant Arrested for Fraud</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
