--- a/apps/govuk-docker/adr/0003-use-docker-volumes-for-improved-macos-performance.html
+++ b/apps/govuk-docker/adr/0003-use-docker-volumes-for-improved-macos-performance.html
@@ -364,6 +364,13 @@
 </div>
 
   <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
+    <div class="govuk-warning-text">
+      <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+      <strong class="govuk-warning-text__text">
+        <span class="govuk-warning-text__assistive">Warning</span>
+        This document has not been updated for a while now. It may be out of date.
+      </strong>
+    </div>
 
   Last updated: <a href="https://github.com/alphagov/govuk-docker/commit/3d0ae4ec7fb4c33bc130ec4352c15c37dda21024">24 Nov 2020</a>
 </div>
